--- a/Credit_card_fraud_detection.ipynb
+++ b/Credit_card_fraud_detection.ipynb
@@ -1189,10 +1189,10 @@
    "source": [
     "def print_confusion_matrix(y_true, y_pred):\n",
     "    cm = confusion_matrix(y_true, y_pred)\n",
-    "    print('True positive = ', cm[0][0])\n",
-    "    print('False positive = ', cm[1][0])\n",
-    "    print('False negative = ', cm[0][1])\n",
-    "    print('True negative = ', cm[1][1])"
+    "    print('True negative = ', cm[0][0])\n",
+    "    print('False negative = ', cm[1][0])\n",
+    "    print('False positive = ', cm[0][1])\n",
+    "    print('True positive = ', cm[1][1])"
    ]
   },
   {
